<resources>
    <string name="app_name">Home Compass</string>

    <string name="onboarding_1_text">The Home Compass application helps you find homeless people in different places</string>
    <string name="skip_word">Skip</string>
    <string name="next_word">Next</string>
    <string name="onboarding_2_text">Through Home Compass, you can find a missing person by uploading a photo of that person</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="enter_your_email_and_we_will_send_the_instruction">Enter your email and we will send the instruction</string>
    <string name="send">Send</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="continue_with">Continue with</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Mohamed Hassan</string>
    <string name="nav_header_subtitle">mohahassan@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_chatBot">Chat bot</string>
    <string name="menu_searchMissing">Search Missing</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="account">Account</string>
    <string name="notifications">Notifications</string>
    <string name="log_out">Log out</string>
    <string name="feedback">Feedback</string>
    <string name="report">Report</string>
    <string name="delete_account">Delete Account</string>
    <string name="m6_33_21_5a4_284_4_284_0_0_1_2_17_275a0_74_0_74_0_0_1_0_75_0_731_0_74_0_74_0_0_1_0_75_0_731a2_8_2_8_0_0_0_6_33_20_037l11_077_20_037a2_79_2_79_0_0_0_13_9_17_285v_0_894a0_75_0_75_0_0_1_1_5_0v0_894a4_273_4_273_0_0_1_11_077_21_5zm17_873_15_281a0_719_0_719_0_0_1_0_1_035l1_56_1_514l9_549_12_732a0_732_0_732_0_1_1_0_1_464h11_7a0_75_0_75_0_0_1_0_693_0_453_0_721_0_721_0_0_1_0_164_0_8l_2_846_2_764a0_763_0_763_0_0_1_1_06_0zm2_13_949l2_6_715a4_274_4_274_0_0_1_6_322_2_5l11_068_2_5a4_284_4_284_0_0_1_15_4_6_725v0_885a0_75_0_75_0_0_1_1_5_0l13_9_6_725a2_8_2_8_0_0_0_11_068_3_963l6_322_3_963a2_79_2_79_0_0_0_3_5_6_715v7_234a0_742_0_742_0_0_1_0_751_0_732a0_741_0_741_0_0_1_2_13_949zm18_594_10_449_l17_876_9_757a0_718_0_718_0_0_1_0_1_034_0_76_0_76_0_0_1_1_06_0_005l0_717_0_691a0_719_0_719_0_0_1_0_005_1_035_0_763_0_763_0_0_1_1_06_0_005z">M6.33,21.5A4.284,4.284 0,0 1,2 17.275a0.74,0.74 0,0 1,0.75 -0.731,0.74 0.74,0 0,1 0.75,0.731A2.8,2.8 0,0 0,6.33 20.037L11.077,20.037A2.79,2.79 0,0 0,13.9 17.285v-0.894a0.75,0.75 0,0 1,1.5 0v0.894A4.273,4.273 0,0 1,11.077 21.5ZM17.873,15.281a0.719,0.719 0,0 1,0 -1.035l1.56,-1.514L9.549,12.732a0.732,0.732 0,1 1,0 -1.464h11.7a0.75,0.75 0,0 1,0.693 0.453,0.721 0.721,0 0,1 -0.164,0.8l-2.846,2.764a0.763,0.763 0,0 1,-1.06 0ZM2,13.949L2,6.715A4.274,4.274 0,0 1,6.322 2.5L11.068,2.5A4.284,4.284 0,0 1,15.4 6.725v0.885a0.75,0.75 0,0 1,-1.5 0L13.9,6.725A2.8,2.8 0,0 0,11.068 3.963L6.322,3.963A2.79,2.79 0,0 0,3.5 6.715v7.234a0.742,0.742 0,0 1,-0.751 0.732A0.741,0.741 0,0 1,2 13.949ZM18.594,10.449 L17.876,9.757a0.718,0.718 0,0 1,0 -1.034,0.76 0.76,0 0,1 1.06,-0.005l0.717,0.691a0.719,0.719 0,0 1,0.005 1.035,0.763 0.763,0 0,1 -1.06,0.005Z</string>
    <string name="my_account">My Account</string>
    <string name="lorem_ipsum_dolor_sit_amet">Lorem ipsum dolor sit amet</string>
    <string name="email">Email: </string>
    <string name="address">Address: </string>
    <string name="_220_street">220 **** street</string>
    <string name="phoneNumber">Phone number: </string>
    <string name="_777_888_999">777888999</string>
    <string name="profile_link">Profile link: </string>
    <string name="https_www_figma_com">https://www.homecompass.com</string>
    <string name="birthday">Birthday: </string>
    <string name="_19_9_2004">19/9/2004</string>
    <string name="gender">Gender: </string>
    <string name="male">Male</string>
    <string name="terrorism">Terrorism</string>
    <string name="hate_speech">Hate speech</string>
    <string name="spam">Spam</string>
    <string name="false_information">False Information</string>
    <string name="harassment">Harassment</string>
    <string name="violence">Violence</string>
    <string name="nudity">Nudity</string>
    <string name="what_s_going_on">what\'s going on?</string>
    <string name="no_pop">No pop</string>
    <string name="popup_notifications">Popup notifications</string>
    <string name="notifications_tone">Notifications tone</string>
    <string name="messages">Messages</string>
    <string name="test_feed_text">I found a homeless boy who \nhad not eaten for two days at the following address ::Lorem ipsumI found a homeless boy who had not eaten for two days at the following address ::Lorem ipsum</string>
    <string name="volunteer">Volunteer</string>
    <string name="mark">Mark</string>
    <string name="high_priority_notifications">High priority notifications</string>
    <string name="add_photo">Add photo</string>
    <string name="talk_to_bot">Talk to Bot..</string>
    <string name="logout">Logout</string>
    <string name="lorem_ipsum_dolor_sit_amet_is_a_latin_phrase_that_translates_to_pain_is_an_illusion">Lorem ipsum dolor sit amet is a Latin phrase that translates to “ pain is an illusion.”</string>
    <string name="st_basils_housing">St Basils Housing</string>
    <string name="edit">Edit</string>
    <string name="feed">Feed</string>
    <string name="works">Works</string>
    <string name="shelters">Shelters</string>
    <string name="food">Food</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="name_of_restaurant">Name of Restaurant:</string>
    <string name="contact">Contact</string>
    <string name="scan_the_person_s_photo_for_search">Scan the person\'s photo for search</string>
</resources>