<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_chatBot"
            android:icon="@drawable/ic_chat_img"
            android:title="@string/menu_chatBot" />
        <item
            android:id="@+id/nav_searchMissing"
            android:icon="@drawable/ic_person_search"
            android:title="@string/menu_searchMissing" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_24"
            android:title="@string/menu_setting" />

    </group>
</menu>