<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivBackArrow"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="30dp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintBottom_toBottomOf="@id/tvNotifications"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvNotifications"
        app:tint="@color/g_gray700"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/notifications"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="20dp"
        android:text="@string/messages"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNotifications" />

    <TextView
        android:id="@+id/tvNotificationsTone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="5dp"
        android:text="@string/notifications_tone"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMessages" />

    <TextView
        android:id="@+id/tvNotificationsToneDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum_dolor_sit_amet"
        app:layout_constraintStart_toStartOf="@id/tvNotificationsTone"
        app:layout_constraintTop_toBottomOf="@id/tvNotificationsTone" />

    <TextView
        android:id="@+id/tvPopupNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="22dp"
        android:text="@string/popup_notifications"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNotificationsToneDesc" />

    <TextView
        android:id="@+id/tvNoPop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_pop"
        app:layout_constraintStart_toStartOf="@id/tvNotificationsTone"
        app:layout_constraintTop_toBottomOf="@id/tvPopupNotifications" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/high_priority_notifications"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvNoPop"
        app:layout_constraintTop_toBottomOf="@+id/tvNoPop" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />


</androidx.constraintlayout.widget.ConstraintLayout>