<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:elevation="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_drawer_header"
        android:layout_width="87dp"
        android:layout_height="87dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/profile_img" />

    <TextView
        android:id="@+id/txt_header_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textSize="17sp"
        android:textColor="@color/olive_teal"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_header_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/olive_teal" />
</LinearLayout>